# ILThermoML

./: .env  .gitignore  .pre-commit-config.yaml  .prettierignore  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: labels.yml  mypy.yml  ruff.yml  tests.yml  uv.yml
examples/viscosity/: dataset.py  design_table.py
src/ilthermoml/: __init__.py  chemistry.py  dataset.py  exceptions.py  featurization.py  memory.py  settings.py
tests/: test_chemistry.py  test_dataset.py  test_featurization.py  test_package.py
